--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,6 +67,7 @@ body {
 .section-hero {
   background: var(--background-color);
   text-align: center;
+  min-height: 600px;
 }
 
 /* section button */
