добавил кнопкам cursor:pointer

--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ body {
   background: #f5f4fa;
   color: var(--title-text-color);
   letter-spacing: 0.03em;
+  cursor: pointer;
 }
 .button-current {
   background: var(--accent-color);
@@ -110,6 +111,7 @@ body {
   background: var(--accent-color);
   color: var(--white-color);
   letter-spacing: 0.06em;
+  cursor: pointer;
 }
 /* section-title */
 .section-title {
